# JSerializer

./: .gitignore  CMakeLists.txt  GenerateProjectFiles.bat  GenerateProjectFilesAndExecute.sh  GenerateProjectFilesAndExecuteClang.sh  GenerateVisualStudioProjectFilesClang.bat  GenerateVisualStudioProjectFilesMSVC.bat  OpenSolution.bat  README.md
JSerializerDemo/: CMakeLists.txt
JSerializerDemo/Source/: Association_Test.cpp  CircularDependeny_Test.cpp  Collections_Test.cpp  CustomSerialization_Test.cpp  Error_Test.cpp  Inheritance_Test.cpp  JSerializerDemo.cpp  Pointer_Test.cpp  PrimitiveDatatypes_Test.cpp  StackedCollection.cpp  StackedCollection_Test.cpp  StackedCollections.cpp  SubClasses_Test.cpp  Validation_Test.cpp
JSerializerDemo/Source/Examples/: Associations.cpp  CustomSerializer.cpp  ErrorHandling.cpp  Inheritance.cpp  NestedStandardCollections.cpp  SimpleSetUp.cpp  Subclasses.cpp  Validation.cpp
JSerializerDemo/Source/Tests/: Association_Test.cpp  Collections_Test.cpp  CustomSerialization_Test.cpp  Error_Test.cpp  Inheritance_Test.cpp  Pointer_Test.cpp  PrimitiveDatatypes_Test.cpp  StackedCollection_Test.cpp  SubClasses_Test.cpp  Validation_Test.cpp
JSerializerDemo/src/: JSerializerDemo.cpp
JSerializerLib/: CMakeLists.txt
JSerializerLib/Include/: JSerializer.h
JSerializerLib/Include/Serializer/: ArraySerializer.h  BaseSerializeType.h  BitsetSerializer.h  ForwardListSerializer.h  ListVectorDequeSerializer.h  ListVectorSerializer.h  MapSerializer.h  PointerSerializer.h  PolymorphicSerializer.h  PriorityQueueSerializer.h  QueueSerializer.h  SerializationManager.h  SetSerializer.h  StackAndQueueSerializer.h  StackSerializer.h  TupleSerializer.h  ValarraySerializer.h  VectorArrayListSerializer.h
JSerializerLib/Include/Utils/: Macros.h  Utils.h
JSerializerLib/src/: JSerializer.cpp  JSerializer.h
